--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ env:
   CLUSTER_NAME: DEMO-DEMO-SUA01-PROD-AKS
   CLUSTER_RESOURCE_GROUP: DEMO-DEMO-SUA01-PROD-RG
   NAMESPACE: robot-shop
-  SECRET: azuresecret
+  SECRET: ${{ secrets.AZURE_CREDENTIALS }}
   APP_NAME: robot-shop
 
 jobs:
@@ -16,17 +16,18 @@ jobs:
     name: Automatic Deploy    
     uses: ./.github/workflows/app.yml
     with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          cluster-name: ${{ env.CLUSTER_NAME }}
-          resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
+          SECRET: '${{ secrets.AZURE_CREDENTIALS }}'
+          CLUSTER_NAME: '${{ env.CLUSTER_NAME }}'
+          CLUSTER_RESOURCE_GROUP: '${{ env.CLUSTER_RESOURCE_GROUP }}'
       
   Inject:
       name: Deploy Sample app
       uses: ./.github/workflows/chaos-test.yml
       with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          cluster-name: ${{ env.CLUSTER_NAME }}
-          resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
+          SECRET: '${{ secrets.AZURE_CREDENTIALS }}'
+          CLUSTER_NAME: DEMO-DEMO-SUA01-PROD-AKS
+          CLUSTER_RESOURCE_GROUP: DEMO-DEMO-SUA01-PROD-RG
+          
   PerfTest:
       name: Run Perf application 
       uses: ./.github/workflows/perf.yml
