--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
           
           CLUSTER_NAME: DEMO-DEMO-SUA01-PROD-AKS
           CLUSTER_RESOURCE_GROUP: DEMO-DEMO-SUA01-PROD-RG
+          NAMESPACE: robot-shop
       
   Inject:
       name: Deploy Sample app
