--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           
           CLUSTER_NAME: DEMO-DEMO-SUA01-PROD-AKS
           CLUSTER_RESOURCE_GROUP: DEMO-DEMO-SUA01-PROD-RG
-          
+          NAMESPACE: robot-shop          
   PerfTest:
       name: Run Perf application 
       uses: ./.github/workflows/perf.yml
