--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -26,7 +26,7 @@ jobs:
         uses: azure/aks-set-context@v1
         name: setupcluster
         with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
           cluster-name: ${{ inputs.CLUSTER_NAME }}
           resource-group: ${{ inputs.CLUSTER_RESOURCE_GROUP }}
           
