--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -14,9 +14,10 @@ on:
       NAMESPACE:
         required: true
         type: string
+
+    secrets:
       AZ_CRED:
         required: true
-        type: string
 
 jobs:
 
@@ -29,7 +30,7 @@ jobs:
         uses: azure/aks-set-context@v1
         name: setupcluster
         with:
-          creds: ${{ inputs.AZ_CRED }}
+          creds: ${{ secrets.AZ_CRED }}
           cluster-name: ${{ inputs.CLUSTER_NAME }}
           resource-group: ${{ inputs.CLUSTER_RESOURCE_GROUP }}
           
