--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,10 @@ jobs:
           CLUSTER_NAME: DEMO-DEMO-SUA01-PROD-AKS
           CLUSTER_RESOURCE_GROUP: DEMO-DEMO-SUA01-PROD-RG
           NAMESPACE: robot-shop
-          AZ_CRED: ${{ env.SECRET }}
-      
-  Inject:
+    secrets:
+          AZ_CRED: ${{ secrets.AZURE_CREDENTIALS }}  
+
+  Inject:        
       name: Deploy Sample app
       uses: ./.github/workflows/chaos-test.yml
       with:
